[package]
name = "rusty_backtest"
version = "0.0.3"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"
description = "Super fast backtest of any enter/exit strategy in pure rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/drbh/rusty-backtest"

[lib]
name = "rusty_backtest"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }